--- a/style.css
+++ b/style.css
@@ -530,7 +530,7 @@ select {
   z-index: 1000;
   background: white;
   padding: 1.1rem;
-  transition: all 0.3s ease-in-out;
+  transition: none 0.3s ease-in-out;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -552,7 +552,7 @@ select {
   background: url("/src/imgs/hamburger-menu-icon.png") no-repeat;
   aspect-ratio: 1;
   width: 2.5rem;
-  transition: all 0.5s;
+  transition: none 0.5s ease-in-out;
   cursor: pointer;
   z-index: 9999;
 }
@@ -575,6 +575,7 @@ select {
   margin: 0;
   transition: transform 0.4s ease-in-out;
   transform: translateX(100%);
+  opacity: 0;
   margin-top: 6rem;
   border-top-left-radius: 10rem;
 }
@@ -589,6 +590,7 @@ select {
     border-top-left-radius: 0;
     padding: 0;
     background: none;
+    opacity: 1;
   }
 }
 .menu .list-items {
@@ -608,7 +610,7 @@ select {
   text-decoration: none;
   color: #ffffff;
   font-size: 1.4rem;
-  transition: all 0.3s ease-in-out;
+  transition: none 0.3s ease-in-out;
   display: block;
 }
 .menu a:hover {
@@ -628,7 +630,7 @@ select {
 }
 @media (min-width: 48em) {
   .menu .cta {
-    transition: all 0.3s ease-in-out;
+    transition: none 0.3s ease-in-out;
     padding: 0.45rem;
   }
   .menu .cta:hover {
